# Drug-Dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-datasets.yml
connectors/: __init__.py  chembl_connector.py  uniprot_connector.py
features/: __init__.py  molecular_features.py  protein_features.py
scripts/: build_datasets.py
tests/: test_pipeline.py
